# GERA-Back

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
alembic/versions/: 1487cee03966_initial_schema.py  e5c5e53eb703_initial_schema.py
app/: main.py
app/api/: routes.py
app/data/: CONCENTRADO_RESGUARDANTES_CON_CLAVE.xlsx  INVENTARIO_SEPTIEMBRE_2025.xlsx  UBICACIONES_INVENTARIO.xlsx
app/db/: database.py
app/models/: __init__.py  activos.py  reportes.py  resguardantes.py  ubicaciones.py
app/schemas/: schemas.py
app/services/: crud.py
app/services/scripts/: load_resguardantes.py  load_ubicaciones.py
